[gd_scene load_steps=13 format=2]

[ext_resource path="res://Views/Battle/UI/Battler.gd" type="Script" id=1]
[ext_resource path="res://TextureBank/Bodys/placeholder.png" type="Texture" id=2]
[ext_resource path="res://Themes/CombatFont.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Clear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 0.210224 ),
"update": 3,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("DamageText:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.148651, 1 ),
"update": 0,
"values": [ Vector2( 90.1397, 68.5901 ), Vector2( 90, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DamageText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 1.9 ),
"transitions": PoolRealArray( 0.965936, 0.707107, 0.0669858, 1.07177 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.819608, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.819608, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DamageText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Dead"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DeadText:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 92.5721, 69.872 ), Vector2( 92.572, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeadText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2.14355, 1 ),
"update": 0,
"values": [ Color( 0.819608, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeadText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Texture:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 2 ),
"transitions": PoolRealArray( 0.435275, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.984314, 0.0470588, 0.0470588, 1 ), Color( 0.0470588, 0.0352941, 0.0235294, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 0.153892 ),
"update": 3,
"values": [ Color( 1, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MissText:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.148651, 1 ),
"update": 0,
"values": [ Vector2( 92.5721, 69.872 ), Vector2( 92.572, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MissText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 0.225313 ),
"update": 3,
"values": [ Color( 0.901961, 0.356863, 0.396078, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Acting"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0129712, 0.5, 1, 1.4, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.203922, 0.878431, 0.235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.203922, 0.878431, 0.235294, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Theme" id=9]
default_font = ExtResource( 3 )

[node name="Battler" type="Control"]
mouse_filter = 1
script = ExtResource( 1 )

[node name="Texture" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 76.653, 111.117 )
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )

[node name="StateAnimations" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.25
playback_speed = 1.5
anims/Clear = SubResource( 1 )
anims/Damage = SubResource( 2 )
anims/Dead = SubResource( 3 )
anims/Highlight = SubResource( 4 )
anims/Miss = SubResource( 5 )
anims/Targeting = SubResource( 6 )

[node name="AlwaysAnimations" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_default_blend_time = 0.25
playback_speed = 1.5
anims/Acting = SubResource( 7 )
anims/Idle = SubResource( 8 )

[node name="DamageText" type="Label" parent="."]
visible = false
margin_left = 90.1397
margin_top = 68.5901
margin_right = 147.14
margin_bottom = 99.5923
theme = SubResource( 9 )
text = "{ DMG }"

[node name="MissText" type="Label" parent="."]
visible = false
self_modulate = Color( 0.819608, 0, 0, 1 )
margin_left = 92.5721
margin_top = 69.872
margin_right = 148.584
margin_bottom = 100.874
theme = SubResource( 9 )
text = "Miss!"

[node name="DeadText" type="Label" parent="."]
visible = false
self_modulate = Color( 0.819608, 0, 0, 1 )
margin_left = 92.5721
margin_top = 69.872
margin_right = 148.589
margin_bottom = 100.874
theme = SubResource( 9 )
text = "Dead!"

[node name="Reversed" type="Control" parent="."]
visible = false
margin_left = 30.0
margin_right = 94.0
margin_bottom = 70.0
rect_scale = Vector2( -1, 1 )

[node name="Health" type="Panel" parent="Reversed"]
editor/display_folded = true
margin_right = 97.0
margin_bottom = 23.0004

[node name="Bar" type="ProgressBar" parent="Reversed/Health"]
self_modulate = Color( 0.196078, 0.901961, 0.0862745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="Reversed/Health/Bar"]
margin_top = -2.8643
margin_right = 99.0
margin_bottom = 28.1357
text = "TEST"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Morale" type="Panel" parent="Reversed"]
editor/display_folded = true
margin_left = -16.447
margin_top = 23.0003
margin_right = 80.5529
margin_bottom = 46.0003

[node name="Bar" type="ProgressBar" parent="Reversed/Morale"]
self_modulate = Color( 0.878431, 0.878431, 0.180392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="Reversed/Morale/Bar"]
margin_top = -2.86427
margin_right = 99.0
margin_bottom = 28.1357
text = "TEST"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Standard" type="Control" parent="."]
visible = false
margin_left = -33.553
margin_right = 6.447
margin_bottom = 40.0

[node name="Health" type="Panel" parent="Standard"]
margin_right = 97.0
margin_bottom = 23.0004

[node name="Bar" type="ProgressBar" parent="Standard/Health"]
self_modulate = Color( 0.196078, 0.901961, 0.0862745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="Standard/Health/Bar"]
margin_top = -2.8643
margin_right = 99.0
margin_bottom = 28.1357
text = "TEST"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Morale" type="Panel" parent="Standard"]
margin_left = -16.447
margin_top = 23.0003
margin_right = 80.5529
margin_bottom = 46.0003

[node name="Bar" type="ProgressBar" parent="Standard/Morale"]
self_modulate = Color( 0.878431, 0.878431, 0.180392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="Standard/Morale/Bar"]
margin_top = -2.86427
margin_right = 99.0
margin_bottom = 28.1357
text = "TEST"
align = 1
__meta__ = {
"_edit_lock_": true
}
[connection signal="mouse_entered" from="Texture" to="." method="_onMouseEntered"]
[connection signal="mouse_exited" from="Texture" to="." method="_onMouseExited"]
